<resources>
    <string name="app_name">Build Complex UI with Constraint Layout</string>
    <string name="placeholder">Singapore image description</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="discard">Discard</string>
    <string name="settings_value">f/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="singapore">Singapore</string>
    <string name="singapore_description">Singapore Description</string>
</resources>